--- a/style.css
+++ b/style.css
@@ -12,6 +12,10 @@
 .newcolor2{
   color: #fff2e5;
 }
+.videoApp{
+  color:#088178;
+  text-decoration: none;
+}
 h1 {
   font-size: 50px;
   line-height: 64px;
